# imgtoss

./: .gitignore  CLAUDE.md  DUPLICATE_MANAGEMENT_REMOVAL_SUMMARY.md  README.md  TASK_2_IMPLEMENTATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_5_IMPLEMENTATION_SUMMARY.md  TASK_6_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  next.config.mjs  package.json  pnpm-lock.yaml  pre-commit-check.sh  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.claude/commands/: fix-front.md  gitc.md
app/: layout.tsx  page.tsx
docs/: API参考.md  LOGGING_GUIDE.md  README.md  ci-cd-pipeline.md  deploy.sh  github-actions-setup.md  index.md  oss-connection-debug-summary.md  package.json  pnpm-lock.yaml  settings-routes.md  tencent-cos-auth-explanation.md  tencent-cos-debug.md  tencent-cos-fix-summary.md  产品介绍.md  开发者指南.md  快速开始指南.md  故障排除.md  文档生成总结.md  最佳实践.md  用户操作手册.md
lib/: README.md  error-handler.ts  index.ts  tauri-api.ts  types.ts  updater-api.ts
scripts/: README-icons.md  build.sh  generate-icons.js  generate-icons.sh  generate-web-icons.sh  图标生成指南.md
src-tauri/: COMMAND_LAYER_IMPLEMENTATION.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: debug_tencent_cos.rs  mod.rs  progress.rs  tests.rs
src-tauri/src/models/: mod.rs  tests.rs
src-tauri/src/services/: config_service.rs  file_service.rs  history_service.rs  image_service.rs  mod.rs  oss_service.rs  oss_service_test.rs
src-tauri/src/utils/: error.rs  logger.rs  mod.rs
(+87 files in other folders)
